--- a/song-analyzer-frontend/src/App.css
+++ b/song-analyzer-frontend/src/App.css
@@ -22,3 +22,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.MuiCard-root {
+    align-items: center;
+    padding: 1em;
+    textAlign: 'center';
+    color: theme.palette.text.secondary;
+}
