--- a/song-analyzer-frontend/src/App.css
+++ b/song-analyzer-frontend/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -11,7 +12,6 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .App-intro {
@@ -26,6 +26,24 @@
 .MuiCard-root {
     align-items: center;
     padding: 1em;
-    textAlign: 'center';
-    color: theme.palette.text.secondary;
+}
+
+#input-card {
+  border-width: thin;
+  border-color: #555555;
+  background-color: #333333;
+  color: white
+}
+
+#input-card > * > * {
+  margin: 1rem;
+  color: white
+}
+
+.MuiInputBase-input {
+  color: white
+}
+
+#text {
+  color: white;
 }
