Add external link to Genius on info card

--- a/song-analyzer-frontend/src/App.css
+++ b/song-analyzer-frontend/src/App.css
@@ -40,6 +40,13 @@
   color: white
 }
 
+#info-card {
+  border-width: thin;
+  border-color: #555555;
+  background-color: #333333;
+  color: white
+}
+
 .MuiInputBase-input {
   color: white
 }
